# websocket_messenger

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _target_directories_8txt.html  annotated.html  beast_8hpp.html  beast_8hpp__dep__incl.map  beast_8hpp__dep__incl.md5  beast_8hpp__incl.map  beast_8hpp__incl.md5  beast_8hpp_source.html  class_commands_processor-members.html  class_commands_processor.html  class_listener-members.html  class_listener.html  class_listener__coll__graph.map  class_listener__inherit__graph.md5  class_shared_state-members.html  class_shared_state.html  class_websocket_session-members.html  class_websocket_session.html  class_websocket_session__inherit__graph.map  class_websocket_session__inherit__graph.md5  classes.html  cmake__pch_8hxx.html  cmake__pch_8hxx_8cxx.html  cmake__pch_8hxx_8gch_8d.html  cmake__pch_8hxx_source.html  commands__processor_8cpp.html  commands__processor_8cpp_8o_8d.html  commands__processor_8cpp__incl.map  commands__processor_8cpp__incl.md5  commands__processor_8hpp.html  commands__processor_8hpp__dep__incl.map  commands__processor_8hpp__dep__incl.md5  (+88 more)
.github/workflows/: cmake.yml
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  (+19 more)
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  precompiled.hpp
src/server/: CMakeLists.txt  beast.hpp  commands_processor.cpp  commands_processor.hpp  listener.hpp  main.cpp  precompiled.hpp  shared_state.cpp  shared_state.hpp
src/tests/: CMakeLists.txt  messenger_tests.cpp
tests/: CMakeLists.txt  client.cpp  client.hpp  messenger_server_tests.cpp  precompiled.hpp
